fix input shift problem

--- a/src/main/resources/edu/wpi/cs3733/d22/teamY/views/css/Fonts.css
+++ b/src/main/resources/edu/wpi/cs3733/d22/teamY/views/css/Fonts.css
@@ -1,8 +1,8 @@
-.title, .subtitle, .popupText, .requestOption, .requestButton, .inputLabel, .requestInput, .inputField, .plainText, .submenuButton, .loginButton, .sidebarTopOptions, .sidebarBottomOptions{
-    -fx-border-style: solid;
-    -fx-border-width: 2;
-    -fx-border-color: "#f0f";
-}
+/*.title, .subtitle, .popupText, .requestOption, .requestButton, .inputLabel, .requestInput, .inputField, .plainText, .submenuButton, .loginButton, .sidebarTopOptions, .sidebarBottomOptions{*/
+/*    -fx-border-style: solid;*/
+/*    -fx-border-width: 2;*/
+/*    -fx-border-color: "#f0f";*/
+/*}*/
 
 .title {
     -fx-font-family: 'Fredoka One';
@@ -37,6 +37,7 @@
 .requestInput{
     -fx-font-family: 'Varela Round';
     -fx-font-size: 20;
+    -fx-padding: 0 0 15px 0;
 }
 
 .inputField{
